# CCL2025-Chinese-Hate-Speech-Detection

./: .gitignore  README.md  pyproject.toml  test.py  training.py
dataset/: results-2nd.txt  results.txt
