[project]
name = "ccl2025-chinese-hate-speech-detection"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.7.0",
    "datasets>=2.19.1",
    "huggingface-hub>=0.33.0",
    "modelscope>=1.27.0",
    "peft>=0.15.2",
    "torch>=2.7.1",
    "torchaudio>=2.7.1",
    "torchvision>=0.22.1",
    "transformers>=4.52.4",
]
